Minimal conn status indicator.